# Lifeguard

./: .env.example  .env.test.example  .firebaserc  .gitignore  README.md  pyproject.toml  requirements.txt  sonar-project.properties
.cursor/rules/: lifeguard-conventions.mdc
.firebase/: hosting.ZGFzaGJvYXJk.cache  hosting.ZGFzaGJvYXJkXGRpc3Q.cache
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy.yml
docs/: Architecture.md  FeatureCatalogue.md  ModuleDevelopment.md  PlannedFeatures.md  SetupGuide.md  StyleGuide.md
docs/TrainingModule/: Design.md
firebase/: firestore.indexes.json  firestore.rules
scripts/: dev.py
src/lifeguard/: __init__.py  __main__.py  bot.py  config.py  exceptions.py  firestore_client.py  firestore_smoke.py  utils.py
src/lifeguard/cogs/: config_cog.py  config_views.py  core.py
src/lifeguard/db/: __init__.py  database.py  models.py  repo.py
src/lifeguard/modules/: __init__.py
src/lifeguard/modules/albion/: __init__.py  api.py  cog.py  models.py  repo.py
src/lifeguard/modules/content_review/: __init__.py  cog.py  config.py  embeds.py  models.py  repo.py  sticky_service.py
src/lifeguard/modules/content_review/views/: __init__.py  config_ui.py  note_modal.py  review_wizard.py  submission_modal.py
src/lifeguard/modules/time_impersonator/: __init__.py  cog.py  config.py  models.py  repo.py
src/lifeguard/modules/voice_lobby/: __init__.py  cog.py  config.py  models.py  repo.py
(+2 files in other folders)
